--- a/TestFramework/TestFramework.csproj
+++ b/TestFramework/TestFramework.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
 	<PackageReference Include="NLog" Version="4.7.13" />
 	<PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+	<PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
     <PackageReference Include="Selenium.Support" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
