Update azure-pipelines.sds.release.yml for Azure Pipelines

--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -63,6 +63,11 @@ stages:
       #     arguments: '--configuration Release'
       #     publishTestResults: true
 
+      - task: VisualStudioTestPlatformInstaller@1
+        inputs:
+          packageFeedSelector: 'nugetOrg'
+          versionSelector: 'latestPreRelease'
+
       - task: VSTest@2
         inputs:
           testSelector: 'testAssemblies'
