--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -66,7 +66,7 @@ stages:
       - task: VisualStudioTestPlatformInstaller@1
         inputs:
           packageFeedSelector: 'nugetOrg'
-          versionSelector: 'latestPreRelease'
+          versionSelector: 'latestStable'
 
       - task: VSTest@2
         inputs:
