Update azure-pipelines.sds.release.yml for Azure Pipelines

--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -84,7 +84,7 @@ stages:
             **\UISelenium.dll
             !**\*TestAdapter.dll
             !**\obj\**
-          searchFolder: '$(projectPath)'
+          searchFolder: '$(System.DefaultWorkingDirectory)'
           rerunFailedTests: true
           rerunMaxAttempts: '2'
           publishRunAttachments: True
