Update azure-pipelines.sds.release.yml for Azure Pipelines

--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -70,9 +70,10 @@ stages:
       #     projects: '$(projectPath)/*.csproj'
       #     arguments: '--configuration Release'
 
-      - task: MSBuild@1
+      - task: VSBuild@1
+        displayName:  Build UI Tests
         inputs:
-          solution: '$(projectPath)/*.csproj'
+          solution: '**\*.sln'
           configuration: 'Release'
           restoreNugetPackages: true
       
