add saucelabs config

--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -62,6 +62,7 @@
       },
       "SauceLabsConfiguration": {
         "SauceUsername": "VideoHearings",
+        "SauceAccessKey": "",
         "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
         "BrowserName": "safari",
         "PlatformName": "iOS",
