--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -1,64 +1,69 @@
-
 trigger: none
 
 pr: none
 
 parameters:
-- name: runUITests
-  displayName: Run UI Tests
-  type: boolean
-  default: true
+  - name: runUITests
+    displayName: Run UI Tests
+    type: boolean
+    default: true
 
-- name: runApiTests
-  displayName: Run API Tests
-  type: boolean
-  default: false
+  - name: runApiTests
+    displayName: Run API Tests
+    type: boolean
+    default: false
 
-- name: environment
-  type: string
-  default: Dev
-  values:
-    - Dev
-    - Test
-    - Stg
-    - Prod
+  - name: environment
+    type: string
+    default: Dev
+    values:
+      - Dev
+      - Test
+      - Stg
+      - Prod
 
 pool:
-  name: 'VH Self Hosted'
+  name: "VH Self Hosted"
 
 stages:
+  ####################################################
+  # UI Testing. ######################################
+  - stage: Automation_Tests_${{ parameters.environment }}
+    displayName: Automation Tests ${{ parameters.environment }}
+    jobs:
+      - ${{ if eq(parameters.runUITests, true) }}:
+          - job: UI_Tests
+            displayName: UI Tests ${{ parameters.environment }}
+            variables:
+              - name: env
+                value: ${{ lower(replace(parameters.environment, 'stg', 'staging')) }}
+              - name: projectPath
+                value: "UI/Selenium"
+              - group: vh-automation-test-${{ parameters.environment }}
+              - group: Saucelabs
+              - name: SystemConfiguration.DevelopmentEnvironmentConfigSettings.RunOnSauceLabs
+                value: true
+              - name: SystemConfiguration.DevelopmentEnvironmentConfigSettings.SauceLabsConfiguration.Username
+                value: $(Saucelabs:Username)
+              - name: SystemConfiguration.DevelopmentEnvironmentConfigSettings.SauceLabsConfiguration.SauceAccessKey
+                value: $(Saucelabs:AccessKey)
 
-####################################################
-# UI Testing. ######################################
-- stage: Automation_Tests_${{ parameters.environment }}
-  displayName: Automation Tests ${{ parameters.environment }}
-  jobs:
-  - ${{ if eq(parameters.runUITests, true) }}:
-    - job: UI_Tests
-      displayName: UI Tests ${{ parameters.environment }}
-      variables:
-      - name: env
-        value: ${{ lower(replace(parameters.environment, 'stg', 'staging')) }}
-      - name: projectPath
-        value: "UI/Selenium"
-      - group: vh-automation-test-${{ parameters.environment }}
-      steps:
+            steps:
+              - task: FileTransform@1
+                displayName: Transform App Settings
+                inputs:
+                  folderPath: $(projectPath)
+                  fileType: json
+                  targetFiles: "**/appsettings.json"
 
-      - task: FileTransform@1
-        displayName: Transform App Settings
-        inputs:
-          folderPath: $(projectPath)
-          fileType: json
-          targetFiles: appsettings.json
+              - pwsh: |
+                  Get-Content "$(projectPath)/appsettings.json"
+                displayName: Print App Settings
 
-      - pwsh: |
-          Get-Content "$(projectPath)/appsettings.json"
-        displayName: Print App Settings
-
-      - task: DotNetCoreCLI@2
-        displayName:  Run UI Tests
-        inputs:
-          command: test
-          projects: '$(projectPath)/*.csproj'
-          arguments: '--configuration Release'
-          publishTestResults: true
+              - task: DotNetCoreCLI@2
+                displayName: Run UI Tests
+                inputs:
+                  command: test
+                  projects: "$(projectPath)/*.csproj"
+                  arguments: "--configuration Release"
+                  publishTestResults: true
