--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -38,9 +38,10 @@
     "LogSuffix": "EndToEndTest",
     "LogLocation": "../../../TestResults/Logs",
 
-    "DevelopmentEnvironmentConfigSettings": {
-      "environment": "Development",
-      "connectionString": "",
+    "EnvironmentConfigSettings": {
+      "Environment": "Development",
+      "BrowserType": "Chrome",
+      "ConnectionString": "",
       "AdminUrl": "",
       "VideoUrl": "",
       "UserPassword": "",
@@ -54,14 +55,14 @@
       "ImageLocation": "/TestResults/Images",
       "RunOnSauceLabs": false,
       "SauceLabsConfiguration_mac": {
-        "SauceUsername": "VideoHearings",
+        "SauceUsername": "",
         "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
         "BrowserName": "Safari",
         "PlatformName": "macOS 12",
         "PlatformVersion": "latest"
       },
       "SauceLabsConfiguration": {
-        "SauceUsername": "VideoHearings",
+        "SauceUsername": "",
         "SauceAccessKey": "",
         "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
         "BrowserName": "safari",
