--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -37,7 +37,6 @@
     "ApplicationHomeUrl": "https://localhost:5000",
     "LogSuffix": "EndToEndTest",
     "LogLocation": "../../../TestResults/Logs",
-
     "EnvironmentConfigSettings": {
       "Environment": "Development",
       "BrowserType": "Chrome",
@@ -53,7 +52,7 @@
       "OneMinuteElementWait": "60",
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
-      "RunOnSauceLabs": false,
+      "RunOnSauceLabs": true,
       "SauceLabsConfiguration_mac": {
         "SauceUsername": "",
         "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
@@ -64,12 +63,12 @@
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
-        "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
-        "BrowserName": "safari",
-        "PlatformName": "iOS",
-        "PlatformVersion": "13.2",
-        "DeviceName": "iPhone 11 Pro Simulator",
-        "Orientation": "PORTRAIT",
+        "SauceUrl": "ondemand.eu-central-1.saucelabs.com:80/wd/hub",
+        "BrowserName": "Chrome",
+        "PlatformName": "Windows",
+        "PlatformVersion": "",
+        "DeviceName": "",
+        "Orientation": "",
         "AppiumVersion": "1.17.1"
       }
     }
