--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -50,9 +50,10 @@
       "PipelineElementWait": 30,
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": "60",
+      "TestResultsDirectory": "default",
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
-      "RunOnSauceLabs": true,
+      "RunOnSauceLabs": false,
       "SauceLabsConfiguration_mac": {
         "SauceUsername": "",
         "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
