--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -60,7 +60,7 @@ stages:
               - task: gitversion/setup@0
                 displayName: Install GitVersion
                 inputs:
-                  versionSpec: "5.x"
+                  versionSpec: "5.11.1"
 
               - task: gitversion/execute@0
                 displayName: Determine Version
