--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -37,10 +37,10 @@
     "ApplicationHomeUrl": "https://localhost:5000",
     "LogSuffix": "EndToEndTest",
     "LogLocation": "../../../TestResults/Logs",
-
-    "DevelopmentEnvironmentConfigSettings": {
-      "environment": "Development",
-      "connectionString": "",
+    "EnvironmentConfigSettings": {
+      "Environment": "Development",
+      "BrowserType": "Chrome",
+      "ConnectionString": "",
       "AdminUrl": "",
       "VideoUrl": "",
       "UserPassword": "",
@@ -50,24 +50,19 @@
       "PipelineElementWait": 30,
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": "60",
+      "TestResultsDirectory": "default",
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
       "RunOnSauceLabs": false,
-      "SauceLabsConfiguration_mac": {
-        "SauceUsername": "VideoHearings",
-        "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
-        "BrowserName": "Safari",
-        "PlatformName": "macOS 12",
-        "PlatformVersion": "latest"
-      },
       "SauceLabsConfiguration": {
-        "SauceUsername": "VideoHearings",
-        "SauceUrl": "@ondemand.eu-central-1.saucelabs.com:80/wd/hub",
-        "BrowserName": "safari",
-        "PlatformName": "iOS",
-        "PlatformVersion": "13.2",
-        "DeviceName": "iPhone 11 Pro Simulator",
-        "Orientation": "PORTRAIT",
+        "SauceUsername": "",
+        "SauceAccessKey": "",
+        "SauceUrl": "ondemand.eu-central-1.saucelabs.com:80/wd/hub",
+        "BrowserName": "Chrome",
+        "PlatformName": "Windows",
+        "PlatformVersion": "",
+        "DeviceName": "",
+        "Orientation": "",
         "AppiumVersion": "1.17.1"
       }
     }
