--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -53,7 +53,7 @@
       "TestResultsDirectory": "default",
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
-      "RunOnSauceLabs": false,
+      "RunOnSauceLabs": true,
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
