--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -36,7 +36,7 @@ stages:
             displayName: UI Tests ${{ parameters.environment }}
             variables:
               - name: env
-                value: ${{ lower(replace(parameters.environment, 'stg', 'staging')) }}
+                value: ${{ lower(replace(parameters.environment, 'Dev', 'Development')) }}
               - name: projectPath
                 value: "UI/Selenium"
               - group: vh-automation-test-${{ parameters.environment }}
@@ -56,6 +56,7 @@ stages:
                 value: $(Build.ArtifactStagingDirectory)/TestResults/
 
             steps:
+              #insert variable to help creat unique test names
               - task: gitversion/setup@0
                 displayName: Install GitVersion
                 inputs:
