--- a/azure-pipelines.sds.nightly.yml
+++ b/azure-pipelines.sds.nightly.yml
@@ -35,34 +35,67 @@ pool:
   name: 'VH Self Hosted'
 
 stages:
+  ####################################################
+  # UI Testing. ######################################
+  - stage: Automation_Tests_${{ parameters.environment }}
+    displayName: Automation Tests ${{ parameters.environment }}
+    jobs:
+      - ${{ if eq(parameters.runUITests, true) }}:
+          - job: UI_Tests
+            displayName: UI Tests ${{ parameters.environment }}
+            variables:
+              - name: env
+                value: ${{ lower(replace(parameters.environment, 'Stg', 'staging')) }}
+              - name: projectPath
+                value: "UI/Selenium"
+              - group: vh-automation-test-${{ parameters.environment }}
+              - group: Saucelabs
+              - group: KinlyConfiguration_${{ parameters.environment }}
+              - name: SystemConfiguration.EnvironmentConfigSettings.RunOnSauceLabs
+                value: true
+              - name: SystemConfiguration.EnvironmentConfigSettings.SauceLabsConfiguration.SauceUsername
+                value: $(Saucelabs:Username)
+              - name: SystemConfiguration.EnvironmentConfigSettings.SauceLabsConfiguration.SauceAccessKey
+                value: $(Saucelabs:AccessKey)
+              - name: SystemConfiguration.EnvironmentConfigSettings.UKConferencePhoneNumber
+                value: $(ConferencePhoneNumber)
+              - name: SystemConfiguration.LogLocation
+                value: $(Build.ArtifactStagingDirectory)/TestResults/Logs
+              - name: SystemConfiguration.EnvironmentConfigSettings.TestResultsDirectory
+                value: $(Build.ArtifactStagingDirectory)/TestResults/
 
-####################################################
-# UI Testing. ######################################
-- stage: Automation_Tests_${{ parameters.environment }}
-  displayName: Automation Tests ${{ parameters.environment }}
-  jobs:
-  - ${{ if eq(parameters.runUITests, true) }}:
-    - job: UI_Tests
-      displayName: UI Tests ${{ parameters.environment }}
-      variables:
-      - name: env
-        value: ${{ lower(replace(parameters.environment, 'stg', 'staging')) }}
-      - name: projectPath
-        value: "UI/Selenium"
-      - group: vh-automation-test-${{ parameters.environment }}
-      steps:
+            steps:
+              #insert variable to help creat unique test names
+              - task: gitversion/setup@0
+                displayName: Install GitVersion
+                inputs:
+                  versionSpec: "5.11.1"
 
-      - task: FileTransform@1
-        displayName: Transform App Settings
-        inputs:
-          folderPath: $(projectPath)
-          fileType: json
-          targetFiles: appsettings.json
+              - task: gitversion/execute@0
+                displayName: Determine Version
 
-      - task: DotNetCoreCLI@2
-        displayName:  Run UI Tests
-        inputs:
-          command: test
-          projects: '$(projectPath)/*.csproj'
-          arguments: '--configuration Release'
-          publishTestResults: true
+              - task: FileTransform@1
+                displayName: Transform App Settings
+                inputs:
+                  folderPath: $(projectPath)
+                  fileType: json
+                  targetFiles: "**/appsettings.json"
+
+              - pwsh: |
+                  Get-Content "$(projectPath)/appsettings.json"
+                displayName: Print App Settings
+
+              - task: DotNetCoreCLI@2
+                displayName: Run UI Tests
+                continueOnError: true
+                inputs:
+                  command: test
+                  projects: "$(projectPath)/*.csproj"
+                  arguments: "--configuration Release --filter TestCategory=Smoketest"
+                  publishTestResults: true
+
+              - task: PublishBuildArtifacts@1
+                displayName: Publish Test Results Output
+                inputs:
+                  pathToPublish: "$(Build.ArtifactStagingDirectory)/TestResults/"
+                  artifactName: TestResultsOutput
