--- a/azure-pipelines.sds.nightly.yml
+++ b/azure-pipelines.sds.nightly.yml
@@ -91,7 +91,7 @@ stages:
                 inputs:
                   command: test
                   projects: "$(projectPath)/*.csproj"
-                  arguments: "--configuration Release --filter TestCategory=Smoketest"
+                  arguments: "--configuration Release --filter TestCategory=EndtoEndTest"
                   publishTestResults: true
 
               - task: PublishBuildArtifacts@1
