use the runonsaucelabs config value instead of tags

--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -54,6 +54,8 @@ stages:
                 value: $(Build.ArtifactStagingDirectory)/TestResults/Logs
               - name: SystemConfiguration.EnvironmentConfigSettings.TestResultsDirectory
                 value: $(Build.ArtifactStagingDirectory)/TestResults/
+              - name: SystemConfiguration.EnvironmentConfigSettings.BrowserType
+                value: Remote
 
             steps:
               - task: FileTransform@1
