--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -76,7 +76,7 @@ stages:
                 inputs:
                   command: test
                   projects: "$(projectPath)/*.csproj"
-                  arguments: "--configuration Release --filter TestCategory=Smoketest""
+                  arguments: "--configuration Release --filter TestCategory=Smoketest"
                   publishTestResults: true
                 env:
                   GITVERSION_FULLSEMVER: $(Build.BuildId)
