Manage Work Allocation test

--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -65,4 +65,8 @@
 		<ProjectReference Include="..\..\TestFramework\TestFramework.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="TestData" />
+	</ItemGroup>
+
 </Project>
