Added Work Allocation test for  Working scenario

--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -69,4 +69,11 @@
 	  <Folder Include="TestData" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="TestData\NonAvailabilityHours.csv" />
+	  <EmbeddedResource Include="TestData\NonAvailabilityHours.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	</ItemGroup>
+
 </Project>
