--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -39,7 +39,7 @@
     <PackageReference Include="Selenium.Axe" Version="4.0.9" />
     <PackageReference Include="Selenium.Support" Version="4.8.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.8.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="109.0.5414.7400" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="111.0.5563.6400" />
     <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Assist.Dynamic" Version="1.4.2" />
@@ -72,6 +72,10 @@
 	<ItemGroup>
 	  <None Remove="TestData\NonAvailabilityHours.csv" />
 	  <EmbeddedResource Include="TestData\NonAvailabilityHours.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <None Remove="TestData\Good.csv" />
+	  <EmbeddedResource Include="TestData\Good.csv">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </EmbeddedResource>
 	</ItemGroup>
