--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<None Remove="App.config" />
+		<None Remove="passwords.json" />
 	</ItemGroup>
   <ItemGroup>
     <PackageReference Include="Appium.WebDriver" Version="5.0.0-beta01" />
@@ -38,7 +39,7 @@
     <PackageReference Include="Selenium.Axe" Version="4.0.9" />
     <PackageReference Include="Selenium.Support" Version="4.8.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.8.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="109.0.5414.7400" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="111.0.5563.6400" />
     <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.Assist.Dynamic" Version="1.4.2" />
@@ -55,9 +56,6 @@
 		<None Update="NLog.config">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Update="passwords.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
 		<None Update="Properties\launchSettings.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
@@ -65,6 +63,21 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\TestFramework\TestFramework.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="TestData" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="TestData\NonAvailabilityHours.csv" />
+	  <EmbeddedResource Include="TestData\NonAvailabilityHours.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <None Remove="TestData\Good.csv" />
+	  <EmbeddedResource Include="TestData\Good.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 </Project>
