--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Appium.WebDriver" Version="5.0.0-beta01" />
     <PackageReference Include="ExtentReports" Version="4.1.0" />
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
+    <PackageReference Include="libphonenumber-csharp" Version="8.13.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
