--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+    <PackageReference Include="RandomNameGenerator" Version="1.0.4" />
     <PackageReference Include="Selenium.Axe" Version="4.0.9" />
     <PackageReference Include="Selenium.Support" Version="4.8.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.8.0" />
