--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<None Remove="App.config" />
+		<None Remove="passwords.json" />
 	</ItemGroup>
   <ItemGroup>
     <PackageReference Include="Appium.WebDriver" Version="5.0.0-beta01" />
@@ -68,6 +69,17 @@
 
 	<ItemGroup>
 	  <Folder Include="TestData" />
-	</ItemGroup> 
-	
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="TestData\NonAvailabilityHours.csv" />
+	  <EmbeddedResource Include="TestData\NonAvailabilityHours.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <None Remove="TestData\Good.csv" />
+	  <EmbeddedResource Include="TestData\Good.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	</ItemGroup>
+
 </Project>
