Update file path in test data

--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -68,6 +68,17 @@
 
 	<ItemGroup>
 	  <Folder Include="TestData" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="TestData\Good.csv" />
+	  <EmbeddedResource Include="TestData\Good.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <None Remove="TestData\NonAvailabilityHours.csv" />
+	  <EmbeddedResource Include="TestData\NonAvailabilityHours.csv">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </EmbeddedResource>
 	</ItemGroup> 
 	
 </Project>
