Update saucelabs setup to read browser and platform from config Remove `RandomNameGenerator` package - it is not a .net core friendly library

--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -53,14 +53,15 @@
       "TestResultsDirectory": "default",
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
-      "RunOnSauceLabs": false,
+      "RunOnSauceLabs": true,
       "SauceLabsConfiguration": {
+        "ConsoleLogging": false,
         "SauceUsername": "",
         "SauceAccessKey": "",
         "SauceUrl": "ondemand.eu-central-1.saucelabs.com:80/wd/hub",
         "BrowserName": "Chrome",
         "PlatformName": "Windows",
-        "PlatformVersion": "",
+        "PlatformVersion": "11",
         "DeviceName": "",
         "Orientation": "",
         "AppiumVersion": "1.17.1"
