--- a/UI/Selenium/UI.csproj
+++ b/UI/Selenium/UI.csproj
@@ -22,7 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Appium.WebDriver" Version="5.0.0-beta01" />
     <PackageReference Include="ExtentReports" Version="4.1.0" />
-    <PackageReference Include="FluentAssertions" Version="6.8.0" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
@@ -34,12 +34,12 @@
     <PackageReference Include="NLog" Version="5.1.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-    <PackageReference Include="RandomNameGenerator" Version="1.0.4" />
+    <PackageReference Include="RandomFriendlyNameGenerator" Version="1.0.7" />
     <PackageReference Include="Selenium.Axe" Version="4.0.9" />
-    <PackageReference Include="Selenium.Support" Version="4.8.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.8.0" />
+    <PackageReference Include="Selenium.Support" Version="4.9.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.9.1" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="111.0.5563.6400" />
     <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
     <PackageReference Include="SpecFlow" Version="3.9.74" />
@@ -48,7 +48,7 @@
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
     <PackageReference Include="TextCopy" Version="6.2.0" />
-    <PackageReference Include="WebDriverManager" Version="2.16.1" />
+    <PackageReference Include="WebDriverManager" Version="2.16.2" />
   </ItemGroup>
 	<ItemGroup>
 		<None Update="appsettings.json">
