Add a remote web driver to run on saucelabs with Chrome

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -42,7 +42,7 @@
       "BrowserType": "Chrome",
       "ConnectionString": "",
       "AdminUrl": "https://vh-admin-web.dev.platform.hmcts.net/",
-      "VideoUrl": "",
+      "VideoUrl": "https://vh-video-web.dev.platform.hmcts.net/",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
@@ -58,6 +58,7 @@
         "SauceUsername": "",
         "SauceAccessKey": "",
         "SauceUrl": "ondemand.eu-central-1.saucelabs.com:80/wd/hub",
+        "SecureSauceUrl": "ondemand.eu-central-1.saucelabs.com:443/wd/hub",
         "BrowserName": "Chrome",
         "PlatformName": "Windows",
         "PlatformVersion": "",
