--- a/UI.PageModels/UI.PageModels.csproj
+++ b/UI.PageModels/UI.PageModels.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentAssertions" Version="6.11.0" />
       <PackageReference Include="Selenium.WebDriver" Version="4.9.1" />
     </ItemGroup>
 
