--- a/azure-pipelines.sds.release.yml
+++ b/azure-pipelines.sds.release.yml
@@ -85,8 +85,14 @@ stages:
                   arguments: "--configuration Release"
                   publishTestResults: true
 
-              - task: PublishBuildArtifacts@1
-                displayName: Publish Test Results Output
+              - task: PublishTestResults@2
+                displayName: Publish Test Results
                 inputs:
-                  pathToPublish: "$(Build.ArtifactStagingDirectory)/TestResults/"
-                  artifactName: TestResultsOutput
+                  testResultsFiles: "**/*TestResults.trx"
+                  testRunTitle: "UI Tests ${{ parameters.environment }}"
+
+              # - task: PublishBuildArtifacts@1
+              #   displayName: Publish Test Results Output
+              #   inputs:
+              #     pathToPublish: "$(Build.ArtifactStagingDirectory)/TestResults/"
+              #     artifactName: TestResultsOutput
