VIH-9936 add work allocation tests via page object models (#177)
* Add a new nightly pipeline to run the non spec flow UI test project

--- a/azure-pipelines.sds.new.nightly.yml
+++ b/azure-pipelines.sds.new.nightly.yml
@@ -86,16 +86,9 @@ stages:
 
               - task: DotNetCoreCLI@2
                 displayName: Run UI Tests
-                continueOnError: true
                 inputs:
                   command: test
                   projects: "$(projectPath)/*.csproj"
                   arguments: "--configuration Release"
                   publishTestResults: true
-
-              - task: PublishTestResults@2
-                displayName: Publish Test Results
-                inputs:
-                  testResultsFiles: "**/*.trx"
-                  testRunTitle: "UI Tests ${{ parameters.environment }}"
-                  failTaskOnFailedTests: true
+                  testRunTitle: "UI Tests ${{ parameters.environment }} - $(Build.BuildNumber)"
