Update schedule for new daily build (#181)
* rename new nightly to 'daily' and set to 7:15am UTC daily

* Swap Staff member for team lead in test since it will be behind the dom1 toggle

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -3,8 +3,8 @@ trigger: none
 pr: none
 
 schedules:
-  - cron: "0 0 * * *"
-    displayName: Daily midnight build
+  - cron: "15 7 * * *"
+    displayName: Daily build
     always: true
     branches:
       include:
